# directory_synchronizer

./: .gitignore  Cargo.toml  README.md
src/: differences.rs  main.rs  tests.rs  ui.rs
